--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ bytemuck = { version = "1.15", features = [ "derive" ] }
 derive_more = "0.99"
 env_logger = "0.11"
 glam = "0.27"
+image = "0.25.1"
 log = "0.4"
 pollster = "0.3"
 serde = { version = "1.0", features = [ "derive" ] }
