--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ opt-level = 3
 
 [dependencies]
 array-init = "2.1"
+bitvec = "1.0.1"
 bracket-noise = "0.8"
 bytemuck = { version = "1.15", features = [ "derive" ] }
 derive_more = "0.99"
