update wgpu to 22.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,9 @@ image = "0.25"
 itertools = "0.13"
 log = "0.4"
 pollster = "0.3"
+rand = "0.8.5"
 rustc-hash = "1.1.0"
 thiserror = "1.0"
-wgpu = "0.20"
+wgpu = "22.0"
 winit = "0.30"
 
